<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_big_20"
        android:layout_marginRight="@dimen/space_big_20"
        android:background="@drawable/shape_white_five_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_big_20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:src="@drawable/img_icon_kufu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space"
            android:layout_marginTop="@dimen/space_big_30"
            android:text="@string/app_index_phone"
            android:textColor="@color/font_text"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_big_40"
            android:text="@string/app_transfer_hotline_number"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/font_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_big_40"
                android:layout_weight="1"
                android:background="@drawable/shape_gray_noradius"
                android:gravity="center"
                android:text="@string/app_cancel"
                android:textColor="@color/font_hint" />

            <View
                android:layout_width="@dimen/space_big"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_big_40"
                android:layout_weight="1"
                android:background="@drawable/shape_theme_noradius"
                android:gravity="center"
                android:text="@string/app_address_sure"
                android:textColor="@color/theme_color" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>