<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_index_bg"
    android:orientation="vertical"
    tools:context="com.soowin.staremblem.ui.login.activity.LoginActivity">

    <include layout="@layout/include_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_login_start"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/space_big_25" />

        <TextView
            android:id="@+id/tv_login_start_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_login_start_english"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/font_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_big_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_pad3"
                android:layout_marginRight="@dimen/space_pad3"
                android:background="@drawable/shape_theme_noradius"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_icon_phone"
                    android:layout_width="@dimen/space_big_30"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space"
                    android:adjustViewBounds="true"
                    android:paddingLeft="@dimen/space_big_15"
                    android:src="@drawable/img_icon_phone" />

                <View
                    android:layout_width="@dimen/space_fengexian2"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space"
                    android:layout_marginTop="@dimen/space"
                    android:background="@color/gray" />

                <EditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/app_login_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:padding="@dimen/space"
                    android:textColor="@color/theme_color"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/font_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/space"
                android:paddingLeft="@dimen/space_big_25"
                android:paddingTop="@dimen/space">

                <TextView
                    android:id="@+id/tv_login_phonehinttext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_transfer_prompt_input"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font_10"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_pad3"
                android:layout_marginRight="@dimen/space_pad3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/shape_theme_noradius"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_icon_sms"
                        android:layout_width="@dimen/space_big_30"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/space"
                        android:adjustViewBounds="true"
                        android:paddingLeft="@dimen/space"
                        android:src="@drawable/img_icon_sms" />

                    <View
                        android:layout_width="@dimen/space_fengexian2"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/space"
                        android:layout_marginTop="@dimen/space"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/et_login_sms_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/app_login_sms_code"
                        android:inputType="number"
                        android:padding="@dimen/space"
                        android:textColor="@color/theme_color"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/font_14" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/space"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space"
                    android:layout_marginTop="@dimen/space" />

                <TextView
                    android:id="@+id/tv_login_get_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_theme_noradius"
                    android:gravity="center"
                    android:text="@string/app_login_get_sms_code"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/font_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/space"
                android:paddingLeft="@dimen/space_big_25"
                android:paddingTop="@dimen/space">

                <TextView
                    android:id="@+id/tv_login_smshinttext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_transfer_prompt_input"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font_10"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_big_40"
            android:layout_marginRight="@dimen/space_big_40"
            android:background="@drawable/shape_theme_corners_30"
            android:gravity="center"
            android:padding="@dimen/space"
            android:text="@string/app_login_login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_big_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_login_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_login"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:id="@+id/tv_login_i_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_login_i_agree"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/tv_login_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_login_user_agreement"
                android:textSize="@dimen/font_12" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
