<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent"
    android:id="@+id/ll_bg"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_big_20"
        android:layout_marginRight="@dimen/space_big_20"
        android:background="@drawable/shape_white_five_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_big_20">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_big_20"
            android:text="@string/app_transfer_select_date"
            android:textColor="@color/font_text"
            android:textSize="@dimen/font_12" />

        <DatePicker
            android:id="@+id/dp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_big_20"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
        <!--<TimePicker
            android:id="@+id/tp_time"
            android:calendarViewShown="false"
            android:timePickerMode="spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TimePicker>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_big_40"
                android:layout_weight="1"
                android:background="@drawable/shape_gray_noradius"
                android:gravity="center"
                android:text="@string/app_cancel"
                android:textColor="@color/font_hint" />

            <View
                android:layout_width="@dimen/space_big"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_big_40"
                android:layout_weight="1"
                android:background="@drawable/shape_theme_noradius"
                android:gravity="center"
                android:text="@string/app_address_sure"
                android:textColor="@color/theme_color" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>